<resources>
    <string name="app_name">BoTeR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_users">Users</string>

    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>

    <string name="veritypassword">VerityPassword</string>
    <string name="phone">Phone</string>
    <string name="report_guy">報告者:</string>
    <string name="report_temp">検温結果:</string>
    <string name="_0">0</string>
    <string name="userid">UserId :</string>
    <string name="report_sent">提出</string>
    <string name="update_profile">Update Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="_2020_05_06">2020/05/06</string>
    <string name="ukai">鵜飼</string>
    <string name="_36">36゜</string>
    <string name="_1">1</string>
    <string name="StudentID">学生番号：</string>
    <string name="phoneNumber">☎番号：</string>
    <string name="report">提出</string>
    <string name="body_tempurate">Body Tempurate</string>
    <string name="student_id">Student ID</string>
    <string name="gjhgj_gmail_com">gjhgj@gmail.com</string>
    <string name="jpEmail">メール：</string>
    <string name="kenon">検温:</string>
    <string name="studentid">StudentID:</string>
    <string name="name2">Name:</string>
    <string name="phone2">Phone:</string>
    <string name="date">Date</string>
    <string name="dateJp">日付：</string>
</resources>
