<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style2"
        android:textSize="@dimen/_20sdp"
        android:text="@string/time"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style2"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style2"
        android:textSize="@dimen/_20sdp"
        android:text="@string/report_guy"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style2"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style2"
        android:textSize="@dimen/_20sdp"
        android:text="@string/report_temp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/editTextTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style2"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        android:inputType="number"
        android:text="@string/_0"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style2"
        android:textSize="@dimen/_20sdp"
        android:text="@string/userid"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_style2"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        android:inputType="number"
        android:text="@string/_0"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_sent"
        android:textSize="@dimen/_28sdp"
        android:background="@drawable/edittext_style"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"/>
</LinearLayout>